# ya-eureka-binder

./: .editorconfig  .gitignore  README.md  poetry.toml  pyproject.toml
.github/workflows/: build-pypi-package.yml  run-ci.yml
tests/: test_client.py
